Add Days 4 and 5. Refactor code.